Documentation update, minor refactoring (#1)