@@ -29,15 +29,16 @@
 package com.dalsemi.onewire.container;
 
 // imports
-import com.dalsemi.onewire.utils.Address;
-import java.util.Enumeration;
-import java.util.Vector;
 
+import com.dalsemi.onewire.OneWireException;
+import com.dalsemi.onewire.adapter.DSPortAdapter;
+import com.dalsemi.onewire.adapter.OneWireIOException;
+import com.dalsemi.onewire.utils.Address;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import com.dalsemi.onewire.adapter.*;
-import com.dalsemi.onewire.OneWireException;
+import java.util.Enumeration;
+import java.util.Vector;
 
 
 /**
@@ -97,11 +98,7 @@ import com.dalsemi.onewire.OneWireException;
  */
 public class OneWireContainer {
 
-    protected final Logger logger = LogManager.getLogger(getClass());
-
-    //--------
-    //-------- Variables
-    //--------
+    protected final Logger logger = LogManager.getLogger();
 
     /**
      * Reference to the adapter that is needed to communicate with this
@@ -119,13 +116,6 @@ public class OneWireContainer {
 
     /**
      * Communication speed requested.
-     * <ul>
-     * <li>     0 (SPEED_REGULAR)
-     * <li>     1 (SPEED_FLEX)
-     * <li>     2 (SPEED_OVERDRIVE)
-     * <li>     3 (SPEED_HYPERDRIVE)
-     * <li>    >3 future speeds
-     * </ul>
      *
      * @see DSPortAdapter#setSpeed
      */
@@ -137,16 +127,12 @@ public class OneWireContainer {
      */
     protected boolean speedFallBackOK;
 
-    //--------
-    //-------- Constructors
-    //--------
-
     /**
-     * Create an empty container.  Must call <code>setupContainer</code> before
-     * using this new container.<p>
+     * Create an empty container.  Must call {@code setupContainer} before
+     * using this new container.
      *
-     * This is one of the methods to construct a container.  The others are
-     * through creating a OneWireContainer with parameters.
+     * This is one of the methods to construct a container. The others are
+     * through creating a OneWireContainer with parameters, they are preferred.
      *
      * @see #OneWireContainer(DSPortAdapter,byte[])
      * @see #OneWireContainer(DSPortAdapter,long)
@@ -162,7 +148,7 @@ public class OneWireContainer {
      * Create a container with a provided adapter object
      * and the address of the iButton or 1-Wire device.<p>
      *
-     * This is one of the methods to construct a container.  The other is
+     * This is one of the methods to construct a container.  The other (discouraged) is
      * through creating a OneWireContainer with NO parameters.
      *
      * @param  sourceAdapter     adapter object required to communicate with
@@ -177,9 +163,9 @@ public class OneWireContainer {
 
     /**
      * Create a container with a provided adapter object
-     * and the address of the iButton or 1-Wire device.<p>
+     * and the address of the iButton or 1-Wire device.
      *
-     * This is one of the methods to construct a container.  The other is
+     * This is one of the methods to construct a container.  The other (discouraged) is
      * through creating a OneWireContainer with NO parameters.
      *
      * @param  sourceAdapter     adapter object required to communicate with
@@ -194,9 +180,9 @@ public class OneWireContainer {
 
     /**
      * Create a container with a provided adapter object
-     * and the address of the iButton or 1-Wire device.<p>
+     * and the address of the iButton or 1-Wire device.
      *
-     * This is one of the methods to construct a container.  The other is
+     * This is one of the methods to construct a container.  The other (discouraged) is
      * through creating a OneWireContainer with NO parameters.
      *
      * @param  sourceAdapter     adapter object required to communicate with
@@ -209,10 +195,6 @@ public class OneWireContainer {
         this.setupContainer(sourceAdapter, newAddress);
     }
 
-    //--------
-    //-------- Setup and adapter methods
-    //--------
-
     /**
      * Provides this container with the adapter object used to access this device and
      * the address of the iButton or 1-Wire device.
@@ -222,14 +204,12 @@ public class OneWireContainer {
      * @param  newAddress        address of this 1-Wire device
      * @see com.dalsemi.onewire.utils.Address
      */
-    @SuppressWarnings("static-access")
     public synchronized void setupContainer(DSPortAdapter sourceAdapter, byte[] newAddress) {
 
         // get a reference to the source adapter (will need this to communicate)
         adapter = sourceAdapter;
 
         // set the Address
-
         System.arraycopy(newAddress, 0, address, 0, 8);
 
         // set desired speed to be SPEED_REGULAR by default with no fallback
@@ -246,7 +226,6 @@ public class OneWireContainer {
      * @param  newAddress        address of this 1-Wire device
      * @see com.dalsemi.onewire.utils.Address
      */
-    @SuppressWarnings("static-access")
     public synchronized void setupContainer(DSPortAdapter sourceAdapter, long newAddress) {
 
         // get a reference to the source adapter (will need this to communicate)
@@ -269,7 +248,6 @@ public class OneWireContainer {
      * @param  newAddress        address of this 1-Wire device
      * @see com.dalsemi.onewire.utils.Address
      */
-    @SuppressWarnings("static-access")
     public synchronized void setupContainer(DSPortAdapter sourceAdapter, String newAddress) {
 
         // get a reference to the source adapter (will need this to communicate)
@@ -291,10 +269,6 @@ public class OneWireContainer {
     public DSPortAdapter getAdapter() {
         return adapter;
     }
-
-    //--------
-    //-------- Device information methods
-    //--------
 
     /**
      * Retrieves the Dallas Semiconductor part number of the 1-Wire device
@@ -336,20 +310,8 @@ public class OneWireContainer {
      * devices maximum speed.  This method can be used by an application
      * to restrict the communication rate due 1-Wire line conditions. <p>
      *
-     * @param newSpeed
-     * <ul>
-     * <li>     0 (SPEED_REGULAR) set to normal communciation speed
-     * <li>     1 (SPEED_FLEX) set to flexible communciation speed used
-     *            for long lines
-     * <li>     2 (SPEED_OVERDRIVE) set to normal communciation speed to
-     *            overdrive
-     * <li>     3 (SPEED_HYPERDRIVE) set to normal communciation speed to
-     *            hyperdrive
-     * <li>    >3 future speeds
-     * </ul>
-     *
-     * @param fallBack boolean indicating it is OK to fall back to a slower
-     *                 speed if true
+     * @param newSpeed Adapter speed requested.
+     * @param fallBack boolean indicating it is OK to fall back to a slower speed if {@code true}.
      *
      */
     public void setSpeed(DSPortAdapter.Speed newSpeed, boolean fallBack) {
@@ -411,10 +373,6 @@ public class OneWireContainer {
         return new Vector<MemoryBank>(0).elements();
     }
 
-    //--------
-    //-------- I/O Methods
-    //--------
-
     /**
      * Verifies that the iButton or 1-Wire device is present on
      * the 1-Wire Network.
@@ -426,7 +384,6 @@ public class OneWireContainer {
      * @throws OneWireException if adapter is not open
      */
     public synchronized boolean isPresent() throws OneWireException {
-
         return adapter.isPresent(address);
     }
 
@@ -457,7 +414,6 @@ public class OneWireContainer {
      * @throws OneWireException WHEN hypterdrive is selected speed
      * @see #setSpeed(com.dalsemi.onewire.adapter.DSPortAdapter.Speed,boolean)
      */
-    @SuppressWarnings("static-access")
     public void doSpeed() throws OneWireException {
 
         boolean is_present = false;
@@ -527,34 +483,11 @@ public class OneWireContainer {
         }
     }
 
-    //--------
-    //-------- Object Methods
-    //--------
-
-    /**
-     * Returns a hash code value for the object. This method is
-     * supported for the benefit of hashtables such as those provided by
-     * <code>java.util.Hashtable</code>.
-     *
-     * @return  a hash code value for this object.
-     * @see     java.util.Hashtable
-     */
     @Override
     public int hashCode() {
-
-        if(this.address==null) {
-            return 0;
-        } else {
-            return (new Long(Address.toLong(this.address))).hashCode();
-        }
+        return Long.valueOf(Address.toLong(this.address)).hashCode();
     }
 
-    /**
-     * Indicates whether some other object is "equal to" this one.
-     * @param   o   the reference object with which to compare.
-     * @return  <code>true</code> if this object is the same as the obj
-     *          argument; <code>false</code> otherwise.
-     */
     @Override
     public boolean equals(Object o) {
 
@@ -575,11 +508,6 @@ public class OneWireContainer {
         return false;
     }
 
-    /**
-     * Returns a string representation of the object.
-     *
-     * @return  a string representation of the object.
-     */
     @Override
     public String toString() {
         return Address.toString(this.address) + " " + this.getName();
